--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
     <script type="html/template" id="notification-template">
       <div class="alert alert-notify alert-dismissible fade in" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <p class="msg"><strong class="msg-icon"></strong> <strong class="msg-status"></strong> <span class="msg-description"></span></p>
+        <p class="note"><strong class="note-icon"></strong> <strong class="note-code"></strong> <strong class="note-name"></strong> <span class="note-message"></span></p>
       </div>
     </script>
 
