--- a/public/index.html
+++ b/public/index.html
@@ -761,10 +761,11 @@
         var resource = $(this).closest(".modal").find("[resource]");
         var uri = resource.attr("resource");
         var mode = resource.data("mode");
+        var individual = new veda.IndividualModel(uri);
         if (mode) {
-          riot.route("#/" + uri + "///" + mode);
+          individual.present("#main", undefined, mode);
         } else {
-          riot.route("#/" + uri);
+          individual.present("#main");
         }
       });
       $(document).on({
