--- a/public/index.html
+++ b/public/index.html
@@ -721,6 +721,7 @@
     <script type="text/javascript" src="/js/common/veda_spa.js"></script>
     <script type="text/javascript" src="/js/common/app_model.js"></script>
     <script type="text/javascript" src="/js/common/individual_model.js"></script>
+    <script type="text/javascript" src="/js/common/individual_model_async.js"></script>
     <script type="text/javascript" src="/js/common/individual_list_model.js"></script>
     <script type="text/javascript" src="/js/common/search_result_model.js"></script>
     <script type="text/javascript" src="/js/common/user_model.js"></script>
