--- a/public/index.html
+++ b/public/index.html
@@ -80,33 +80,6 @@
       </form>
     </script>
 
-    <!-- JSON template -->
-    <script type="html/template" id="json-template">
-      <div class="container sheet">
-        <pre style="border:none;background-color:#fff;"></pre>
-        <a id="default" class="btn btn-info" href="#/@">DEFAULT</a>
-        <a id="generic" class="btn btn-default" href="#/@//generic">GENERIC</a>
-        <a id="json" class="btn btn-default" href="#/@//json">JSON</a>
-        <a id="ttl" class="btn btn-default" href="#/@//ttl">TTL</a>
-        <div class="actions pull-right">
-          <button id="edit" class="btn btn-primary">Edit</button>
-          <button id="save" class="hidden btn btn-success">Save</button>
-          <button id="cancel" class="hidden btn btn-default">Cancel</button>
-        </div>
-      </div>
-    </script>
-
-    <!-- TTL template -->
-    <script type="html/template" id="ttl-template">
-      <div class="container sheet">
-        <pre style="border:none;background-color:#fff;"></pre>
-        <a id="default" class="btn btn-info" href="#/@">DEFAULT</a>
-        <a id="generic" class="btn btn-default" href="#/@//generic">GENERIC</a>
-        <a id="json" class="btn btn-default" href="#/@//json">JSON</a>
-        <a id="ttl" class="btn btn-default" href="#/@//ttl">TTL</a>
-      </div>
-    </script>
-
     <!-- Individual template -->
     <script type="html/template" id="individual-template">
       <span id="individual-label"></span>
@@ -539,26 +512,26 @@
         <div class="properties"></div>
         <br>
         <br>
-        <div class="btn-group dropup">
-          <button type="button" class="action btn btn-warning dropdown-toggle view edit -search -draft -version" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span about="v-s:Send" property="rdfs:label"></span>
-            <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu" id="standard-tasks"></ul>
-        </div>
         <div class="actions pull-left">
-          <button type="button" class="action btn btn-primary view -edit -search" id="edit">Редактировать</button>
-          <button type="button" class="action btn btn-success -view edit -search" id="save">Сохранить</button>
-          <button type="button" class="action btn btn-default -view edit -search" id="cancel">Отмена</button>
-          <button type="button" class="action btn btn-link view edit -search" id="delete">Удалить</button>
-          <button type="button" class="action btn btn-primary view -edit -search" id="rightsOrigin">Права доступа</button>
-          <button type="button" class="action btn btn-primary view -edit -search" id="journal">Журнал</button>
+          <button type="button" class="action btn btn-primary view -edit -search" id="edit" about="v-s:Edit" property="rdfs:label"></button>
+          <button type="button" class="action btn btn-success -view edit -search" id="save" about="v-s:Save" property="rdfs:label"></button>
+          <button type="button" class="action btn btn-default -view edit -search" id="cancel" about="v-s:Cancel" property="rdfs:label"></button>
+          <button type="button" class="action btn btn-link view edit -search" id="delete" about="v-s:Delete" property="rdfs:label"></button>
+          <button type="button" class="action btn btn-primary view -edit -search" id="rightsOrigin" about="v-s:RightsOrigin" property="rdfs:label"></button>
+          <button type="button" class="action btn btn-primary view -edit -search" id="journal" about="v-s:Journal" property="rdfs:label"></button>
+          <div class="btn-group dropup">
+            <button type="button" class="action btn btn-warning dropdown-toggle view edit -search -draft -version" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <span about="v-s:Send" property="rdfs:label"></span>
+              <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" id="standard-tasks"></ul>
+          </div>
         </div>
         <div class="pull-right">
-          <a id="default" class="btn btn-info" href="#/@">DEFAULT</a>
-          <a id="generic" class="btn btn-default disabled" href="#/@//generic">GENERIC</a>
-          <a id="json" class="btn btn-default" href="#/@//json">JSON</a>
-          <a id="ttl" class="btn btn-default" href="#/@//ttl">TTL</a>
+          <a id="default" class="btn btn-info" href="#/@" about="v-s:Default" property="rdfs:label"></a>
+          <a id="generic" class="disabled btn btn-default" href="#/@//generic">generic</a>
+          <a id="json" class="btn btn-default" href="#/@//v-ui:json">json</a>
+          <a id="ttl" class="btn btn-default" href="#/@//v-ui:ttl">ttl</a>
         </div>
       </div>
     </script>
