--- a/public/index.html
+++ b/public/index.html
@@ -478,6 +478,7 @@
     <script type="text/javascript" src="/js/browser/update_service.js"></script>
     <script type="text/javascript" src="/js/browser/displayed_services.js"></script>
     <script type="text/javascript" src="/js/browser/individual_presenter.js"></script>
+    <script type="text/javascript" src="/js/browser/individual_presenter_async.js"></script>
     <script type="text/javascript" src="/js/browser/saved_search_list.js"></script>
     <script type="text/javascript" src="/js/browser/save_search.js"></script>
     <script type="text/javascript" src="/js/browser/search_presenter.js"></script>
