Swipe support for search result tables. Closes #343

--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,8 @@
   <body>
     <!-- Application container -->
     <div id="app"></div>
-    
-    
+
+
     <!-- Login form -->
     <div id="login-container" class="hidden"></div>
 
@@ -440,6 +440,7 @@
     <script type="text/javascript" src="/js/browser/lib/bootstrap-datetimepicker.min.js"></script>
     <script type="text/javascript" src="/js/browser/lib/fullcalendar.min.js"></script>
     <script type="text/javascript" src="/js/browser/lib/locale/ru.js"></script>
+    <script type="text/javascript" src="/js/browser/lib/jquery.touchSwipe.min.js"></script>
 
     <!-- CodeMirror -->
     <script type="text/javascript" src="/js/browser/lib/codemirror/codemirror.js"></script>
