--- a/public/index.html
+++ b/public/index.html
@@ -240,6 +240,7 @@
           <div class="modal-content">
             <div class="modal-body">
                <button type="button" class="close" data-dismiss="modal"><span class="fa fa-times"></span></button>
+               <div class="holder"></div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-primary pull-left" id="ok" data-dismiss="modal">Ok</button>
@@ -257,6 +258,7 @@
             <div class="modal-body">
               <button id="follow" class="close" style="margin-right:20px;" data-dismiss="modal"><span class="fa fa-window-maximize"></span></button>
               <button type="button" class="close" data-dismiss="modal"><span class="fa fa-times"></span></button>
+              <div class="holder"></div>
             </div>
           </div>
         </div>
@@ -463,7 +465,6 @@
     <script type="text/javascript" src="/js/common/veda_spa.js"></script>
     <script type="text/javascript" src="/js/common/app_model.js"></script>
     <script type="text/javascript" src="/js/common/individual_model.js"></script>
-    <script type="text/javascript" src="/js/common/individual_model_async.js"></script>
     <script type="text/javascript" src="/js/common/individual_list_model.js"></script>
     <script type="text/javascript" src="/js/common/search_result_model.js"></script>
     <script type="text/javascript" src="/js/common/user_model.js"></script>
