--- a/public/index.html
+++ b/public/index.html
@@ -297,6 +297,13 @@
       </div>
     </script>
 
+    <!-- Password control template -->
+    <script type="html/template" id="password-control-template">
+      <div>
+        <input type="password" class="form-control" autocomplete="on" />
+      </div>
+    </script>
+
     <!-- Text control template -->
     <script type="html/template" id="text-control-template">
       <div>
