autocomplete feature upd

--- a/public/index.html
+++ b/public/index.html
@@ -43,13 +43,12 @@
   </head>
   <body>
 
-
     <!-- Login form -->
     <div id="login-container" class="hidden"></div>
 
     <!-- Autocomplete feature -->
-    <iframe id="autocomplete-frame" name="autocomplete-frame" style="display:none" src="about:blank"></iframe>
-    <form id="autocomplete-form" target="autocomplete-frame" action="about:blank">
+    <iframe name="autocomplete-frame" style="display:none" src="about:blank"></iframe>
+    <form target="autocomplete-frame" method="post" action="about:blank" autocomplete="on" onkeypress="return (event.keyCode !== 13 || event.target.tagName === 'TEXTAREA')">
       <!-- Application container -->
       <div id="app"></div>
     </form>
