--- a/public/index.html
+++ b/public/index.html
@@ -453,6 +453,7 @@
     <script type="text/javascript" src="/js/browser/lib/fullcalendar.min.js"></script>
     <script type="text/javascript" src="/js/browser/lib/locale/ru.js"></script>
     <script type="text/javascript" src="/js/browser/lib/jquery.touchSwipe.min.js"></script>
+    <script type="text/javascript" src="/js/browser/lib/jszip.min.js"></script>
 
     <!-- CodeMirror -->
     <script type="text/javascript" src="/js/browser/lib/codemirror/codemirror.js"></script>
