promises lib replaced

--- a/public/index.html
+++ b/public/index.html
@@ -471,7 +471,7 @@
 
     <!-- Veda browser & server -->
     <script type="text/javascript" src="/js/common/lib/riot.js"></script>
-    <script type="text/javascript" src="/js/common/lib/promiz.min.js"></script>
+    <script type="text/javascript" src="/js/common/lib/promise.js"></script>
     <script type="text/javascript" src="/js/common/lib/sha256.js"></script>
     <script type="text/javascript" src="/js/common/util.js"></script>
     <script type="text/javascript" src="/js/common/veda_spa.js"></script>
