--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,16 @@
       </form>
     </script>
 
+    <!-- Drafts template -->
+    <script type="html/template" id="drafts-template">
+      <div id="drafts" class="container sheet">
+        <h2 id="drafts-title"></h2>
+        <hr>
+        <ol id="drafts-list"></ol>
+        <button id="delete-all" class="btn btn-default"></button>
+      </div>
+    </script>
+
     <!-- MODALS -->
 
     <!-- Individual modal -->
