--- a/public/index.html
+++ b/public/index.html
@@ -332,6 +332,7 @@
     <script type="text/javascript" src="/js/browser/backend.js"></script>
     <script type="text/javascript" src="/js/browser/util.js"></script>
     <script type="text/javascript" src="/js/browser/veda_controls.js"></script>
+    <script type="text/javascript" src="/js/browser/table-sortable.js"></script>
     <script type="text/javascript" src="/js/browser/pager.js"></script>
     <script type="text/javascript" src="/js/browser/update_service.js"></script>
     <script type="text/javascript" src="/js/browser/individual_presenter.js"></script>
