--- a/public/index.html
+++ b/public/index.html
@@ -299,6 +299,7 @@
     <script type="text/javascript" src="/js/browser/lib/locale/ru.js"></script>
     <script type="text/javascript" src="/js/browser/lib/jquery.touchSwipe.min.js"></script>
     <script type="text/javascript" src="/js/browser/lib/jszip.min.js"></script>
+    <script type="text/javascript" src="/js/browser/lib/marked.min.js"></script>
 
     <!-- CodeMirror -->
     <script type="text/javascript" src="/js/browser/lib/codemirror/codemirror.js"></script>
