--- a/public/index.html
+++ b/public/index.html
@@ -135,18 +135,30 @@
 
     <!-- Link control template -->
     <script type="html/template" id="link-control-template">
-      <div class="scrollable-typeahead">
+      <div class="scrollable-typeahead link-control">
         <div class="input-group">
           <div class="input-group-addon btn btn-default tree">
             <i class="fa fa-sitemap"></i>
           </div>
-          <input type="text" class="form-control fulltext"/>
+          <input type="text" class="form-control fulltext" autocomplete="off"/>
           <div class="input-group-addon btn btn-default dropdown">
             <i class="caret"></i>
           </div>
           <div class="input-group-addon btn btn-default create">
             <i class="glyphicon glyphicon-plus"></i>
           </div>
+        </div>
+        <div class="fulltext-menu">
+          <div class="header">
+            <div class="checkbox">
+              <label>
+                <input type="checkbox">
+                <strong class="select-all"></strong>
+              </label>
+              <hr class="margin-sm">
+            </div>
+          </div>
+          <div class="suggestions"></div>
         </div>
       </div>
     </script>
