fulltext link control rewrite finished

--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,7 @@
 
     <!-- Link control template -->
     <script type="html/template" id="link-control-template">
-      <div class="scrollable-typeahead link-control">
+      <div class="link-control">
         <div class="input-group">
           <div class="input-group-addon btn btn-default tree">
             <i class="fa fa-sitemap"></i>
@@ -148,18 +148,7 @@
             <i class="glyphicon glyphicon-plus"></i>
           </div>
         </div>
-        <div class="fulltext-menu">
-          <div class="header">
-            <div class="checkbox">
-              <label>
-                <input type="checkbox">
-                <strong class="select-all"></strong>
-              </label>
-              <hr class="margin-sm">
-            </div>
-          </div>
-          <div class="suggestions"></div>
-        </div>
+        <div class="fulltext-menu"></div>
       </div>
     </script>
 
