multiline fulltext link control

--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@
           <div class="input-group-addon btn btn-default tree">
             <i class="fa fa-sitemap"></i>
           </div>
-          <input type="text" class="form-control fulltext" autocomplete="off"/>
+          <textarea rows="1" class="form-control fulltext"></textarea>
           <div class="input-group-addon btn btn-default dropdown">
             <i class="caret"></i>
           </div>
@@ -169,7 +169,7 @@
     <!-- Text control template -->
     <script type="html/template" id="text-control-template">
       <div>
-        <textarea class="form-control" rows="1" autocomplete="on" />
+        <textarea class="form-control" rows="1" />
       </div>
     </script>
 
@@ -188,7 +188,7 @@
       <div>
         <div class="input-group">
           <div class="input-group-addon"><small class="language-tag"></small></div>
-          <textarea class="form-control" lang="" rows="1" autocomplete="on" />
+          <textarea class="form-control" lang="" rows="1" />
         </div>
       </div>
     </script>
