veda-control data-type="worktime" для поля с пересчетом времени

--- a/public/index.html
+++ b/public/index.html
@@ -215,6 +215,33 @@
       </div>
     </script>
 
+    <!-- WorkTime control template -->
+    <script type="html/template" id="worktime-control-template">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="input-group">
+            <span class="input-group-addon">Дней</span>
+            <input type="text">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="input-group">
+            <span class="input-group-addon">Часов</span>
+            <input type="text">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="input-group">
+            <span class="input-group-addon">Минут</span>
+            <input type="text">
+          </div>
+        </div>
+      </div>
+      <div>
+        <input type="text" class="form-control" style="display:none" placeholder="#" />
+      </div>
+    </script>
+
     <!-- Numeration control template -->
     <script type="html/template" id="numeration-control-template">
       <div class="input-group">
