fulltext control actions

--- a/public/index.html
+++ b/public/index.html
@@ -148,7 +148,16 @@
             <i class="glyphicon glyphicon-plus"></i>
           </div>
         </div>
-        <div class="fulltext-menu"></div>
+        <div class="fulltext-menu">
+          <div class="header">
+            <small class="actions">
+              <span class="select-all" style="cursor:pointer; border-bottom: 1px dashed #707070;"></span> &nbsp;&nbsp;
+              <span class="cancel-selection" style="cursor:pointer; border-bottom: 1px dashed #707070;"></span> &nbsp;&nbsp;
+              <span class="invert-selection" style="cursor:pointer; border-bottom: 1px dashed #707070;"></span>
+            </small>
+          </div>
+          <div class="suggestions"></div>
+        </div>
       </div>
     </script>
 
