--- a/public/index.html
+++ b/public/index.html
@@ -149,11 +149,14 @@
           </div>
         </div>
         <div class="fulltext-menu">
-          <div class="header">
-            <small class="actions">
-              <span class="select-all" style="cursor:pointer; border-bottom: 1px dashed #707070;"></span> &nbsp;&nbsp;
-              <span class="cancel-selection" style="cursor:pointer; border-bottom: 1px dashed #707070;"></span> &nbsp;&nbsp;
-              <span class="invert-selection" style="cursor:pointer; border-bottom: 1px dashed #707070;"></span>
+          <div class="header clearfix">
+            <small class="actions pull-left">
+              <span class="select-all"></span>
+              <span class="cancel-selection"></span>
+              <span class="invert-selection"></span>
+            </small>
+            <small class="actions pull-right">
+              <span class="close-menu"></span>
             </small>
           </div>
           <div class="suggestions"></div>
