missing file for previous commit

--- a/public/index.html
+++ b/public/index.html
@@ -229,32 +229,36 @@
 
     <!-- WorkTime control template -->
     <script type="html/template" id="worktime-control-template">
-      <div class="row">
-        <div class="col-md-3">
-          <div class="input-group">
-            <span class="input-group-addon">DD</span>
-            <input type="text">
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="input-group">
-            <span class="input-group-addon">HH</span>
-            <input type="text">
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="input-group">
-            <span class="input-group-addon">mm</span>
-            <input type="text">
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="input-group">
-            <span class="input-group-addon">&sum;</span>
-            <span id="worktime-summary-text"></span>
-          </div>
-        </div>
-      </div>
+      <table>
+        <tbody>
+          <tr>
+            <td width="25%">
+              <div class="input-group">
+                <span class="input-group-addon">DD</span>
+                <input type="text">
+              </div>
+            </td>
+            <td width="25%">
+              <div class="input-group">
+                <span class="input-group-addon">HH</span>
+                <input type="text">
+              </div>
+            </td>
+            <td width="25%">
+              <div class="input-group">
+                <span class="input-group-addon">mm</span>
+                <input type="text">
+              </div>
+            </td>
+            <td>
+              <div class="input-group" style="width:100%">
+                <span class="input-group-addon">&sum;</span>
+                <span id="worktime-summary-text" class="text-right"></span>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
       <div>
         <input type="text" class="form-control" style="display:none"/>
       </div>
