file control update

--- a/public/index.html
+++ b/public/index.html
@@ -322,8 +322,8 @@
     <!-- File control template -->
     <script type="html/template" id="file-control-template">
       <div>
-        <input class="file" type="file" style="display:none"/>
-        <button class="btn btn-default">
+        <input type="file" style="display:none"/>
+        <button class="browse btn btn-default">
           Browse...<strong class="indicator-percentage"></strong><span class="indicator-spinner fa fa-spinner fa-pulse fa-lg fa-fw text-info" style="display:none"></span>
         </button>
       </div>
