--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,19 @@
 
     <!-- MODALS -->
 
+    <!-- Minimal modal -->
+    <script type="html/template" id="minimal-modal-template">
+      <div class="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-body">
+               <button type="button" class="close" data-dismiss="modal"><span class="fa fa-times"></span></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </script>
+
     <!-- Individual modal -->
     <script type="html/template" id="individual-modal-template">
       <div class="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true" data-backdrop="static">
