promise.js -> browser/lib

--- a/public/index.html
+++ b/public/index.html
@@ -345,6 +345,7 @@
     <!-- Javascript -->
 
     <!-- Utils & UI -->
+    <script type="text/javascript" src="/js/browser/lib/promise.js"></script>
     <script type="text/javascript" src="/js/browser/lib/jquery.js"></script>
     <script type="text/javascript" src="/js/browser/lib/jquery-ui.min.js"></script>
     <script type="text/javascript" src="/js/browser/lib/bootstrap.min.js"></script>
@@ -378,7 +379,6 @@
 
     <!-- Veda browser & server -->
     <script type="text/javascript" src="/js/common/lib/riot.js"></script>
-    <script type="text/javascript" src="/js/common/lib/promise.js"></script>
     <script type="text/javascript" src="/js/common/lib/sha256.js"></script>
     <script type="text/javascript" src="/js/common/util.js"></script>
     <script type="text/javascript" src="/js/common/veda_spa.js"></script>
