numerator.js moved ./js/server -> ./js/common

--- a/public/index.html
+++ b/public/index.html
@@ -388,6 +388,7 @@
     <script type="text/javascript" src="/js/common/user_model.js"></script>
     <script type="text/javascript" src="/js/common/ontology_model.js"></script>
     <script type="text/javascript" src="/js/common/drafts_model.js"></script>
+    <script type="text/javascript" src="/js/common/numerator.js"></script>
 
     <!-- Veda browser only -->
     <script type="text/javascript" src="/js/browser/notify.js"></script>
