password / secret code placeholders

--- a/public/index.html
+++ b/public/index.html
@@ -54,9 +54,9 @@
           <button type="submit" id="submit-login-password" class="btn btn-lg btn-primary btn-block">Войти / Sign in</button>
         </fieldset>
         <fieldset id="enter-new-password" class="hidden">
-          <input class="form-control input-lg" id="new-password" required="required" placeholder="new password" type="password" name="new-password"/>
+          <input class="form-control input-lg" id="new-password" required="required" placeholder="Новый пароль / New password" type="password" name="new-password"/>
           <!--input class="form-control input-lg" id="retype-new-password" required="required" placeholder="retype new password" type="password" name="retype-new-password"/-->
-          <input class="form-control input-lg" id="secret" required="required" placeholder="code from e-mail" type="text" name="secret"/>
+          <input class="form-control input-lg" id="secret" required="required" placeholder="Код из письма / Code from e-mail" type="text" name="secret"/>
           <br>
           <button type="submit" id="submit-new-password" class="btn btn-lg btn-primary btn-block">Войти / Sign in</button>
         </fieldset>
