client auth update

--- a/public/index.html
+++ b/public/index.html
@@ -48,30 +48,40 @@
       <form role="form">
         <h3>Войдите / Sign in</h3>
         <fieldset id="enter-login-password">
-          <input class="form-control input-lg" id="login" required="required" placeholder="login" type="text" name="login" autofocus="autofocus"/>
-          <input class="form-control input-lg" id="password" required="required" placeholder="password" type="password" name="password"/>
+          <input class="form-control input-lg" id="login" placeholder="login" type="text" name="login" autofocus="autofocus"/>
+          <input class="form-control input-lg" id="password" placeholder="password" type="password" name="password"/>
           <br>
           <button type="submit" id="submit-login-password" class="btn btn-lg btn-primary btn-block">Войти / Sign in</button>
+          <button type="submit" id="forgot-password" class="btn btn-link btn-block btn-sm">Забыли пароль? / Forgot password?</button>
         </fieldset>
         <fieldset id="enter-new-password" class="hidden">
-          <input class="form-control input-lg" id="new-password" required="required" placeholder="Новый пароль / New password" type="password" name="new-password"/>
+          <input class="form-control input-lg" id="new-password" placeholder="Новый пароль / New password" type="password" name="new-password"/>
           <!--input class="form-control input-lg" id="retype-new-password" required="required" placeholder="retype new password" type="password" name="retype-new-password"/-->
-          <input class="form-control input-lg" id="secret" required="required" placeholder="Код из письма / Code from e-mail" type="text" name="secret"/>
+          <input class="form-control input-lg" id="secret" placeholder="Код из письма / Code from e-mail" type="text" name="secret"/>
           <br>
           <button type="submit" id="submit-new-password" class="btn btn-lg btn-primary btn-block">Войти / Sign in</button>
+          <button type="submit" id="request-secret" class="btn btn-link btn-block btn-sm">Запросить новый код / Request new code</button>
         </fieldset>
         <br>
-        <div id="login-failed-error" class="hidden">
-          <p><strong class="text-danger">Ошибка!</strong> Неверное имя пользователя или пароль.</p>
-          <p><strong class="text-danger">Error!</strong> Wrong login or password.</p>
+        <div id="login-failed-error" class="hidden alert alert-danger">
+          <p><strong>Ошибка!</strong> Неверное имя пользователя или пароль.</p>
+          <p><strong>Error!</strong> Wrong login or password.</p>
         </div>
-        <div id="password-expired-error" class="hidden">
-          <p><strong class="text-danger">Ошибка!</strong> Истекло время действия пароля. На вашу почту выслан временный код для смены пароля.</p>
-          <p><strong class="text-danger">Error!</strong> Password expired. Check your email for temporal secret code.</p>
+        <div id="password-expired-error" class="hidden alert alert-danger">
+          <p><strong>Ошибка!</strong> Истекло время действия пароля. На вашу почту выслан временный код для смены пароля.</p>
+          <p><strong>Error!</strong> Password expired. Check your email for temporal secret code.</p>
         </div>
-        <div id="new-password-error" class="hidden">
-          <p><strong class="text-danger">Ошибка!</strong> Новый пароль не принят. Повторите попытку с новым кодом.</p>
-          <p><strong class="text-danger">Error!</strong> New password was not accepted. Try with new secret code.</p>
+        <div id="invalid-secret-error" class="hidden alert alert-danger">
+          <p><strong>Ошибка!</strong> Неверный код. Повторите попытку с новым кодом.</p>
+          <p><strong>Error!</strong> Invalid secret code. Try with new secret code.</p>
+        </div>
+        <div id="invalid-password-error" class="hidden alert alert-danger">
+          <p><strong>Ошибка!</strong> Новый пароль не принят. Повторите попытку.</p>
+          <p><strong>Error!</strong> New password in not accepted. Try again.</p>
+        </div>
+        <div id="secret-request-info" class="hidden alert alert-info">
+          <p><strong>Инфо!</strong> Вам выслан новый код для смены пароля.</p>
+          <p><strong>Info!</strong> New secret code sent. Try to change password with new secret code.</p>
         </div>
       </form>
     </div>
@@ -416,6 +426,7 @@
     <script type="text/javascript" src="/js/browser/drafts_presenter.js"></script>
     <script type="text/javascript" src="/js/browser/veda_workflow_editor.js"></script>
     <script type="text/javascript" src="/js/browser/app_presenter.js"></script>
+    <script type="text/javascript" src="/js/browser/auth.js"></script>
 
     <script type="text/javascript">
       $(function(){
