auth messages upd

--- a/public/index.html
+++ b/public/index.html
@@ -68,8 +68,8 @@
           <p><strong>Error!</strong> Wrong login or password.</p>
         </div>
         <div id="password-expired-error" class="hidden alert alert-danger">
-          <p><strong>Ошибка!</strong> Истекло время действия пароля. На вашу почту выслан временный код для смены пароля.</p>
-          <p><strong>Error!</strong> Password expired. Check your email for temporal secret code.</p>
+          <p><strong>Ошибка!</strong> Истекло время действия пароля.</p>
+          <p><strong>Error!</strong> Password expired.</p>
         </div>
         <div id="invalid-secret-error" class="hidden alert alert-danger">
           <p><strong>Ошибка!</strong> Неверный код. Повторите попытку с новым кодом.</p>
