--- a/public/index.html
+++ b/public/index.html
@@ -56,10 +56,10 @@
         </fieldset>
         <fieldset id="enter-new-password" class="hidden">
           <input class="form-control input-lg" id="new-password" placeholder="Новый пароль / New password" type="password" name="new-password"/>
-          <!--input class="form-control input-lg" id="retype-new-password" required="required" placeholder="retype new password" type="password" name="retype-new-password"/-->
+          <!--input class="form-control input-lg" id="retype-new-password" placeholder="retype new password" type="password" name="retype-new-password"/-->
           <input class="form-control input-lg" id="secret" placeholder="Код из письма / Code from e-mail" type="text" name="secret"/>
           <br>
-          <button type="submit" id="submit-new-password" class="btn btn-lg btn-primary btn-block">Войти / Sign in</button>
+          <button type="submit" id="submit-new-password" class="btn btn-lg btn-primary btn-block">Отправить / Submit</button>
           <button type="submit" id="request-secret" class="btn btn-link btn-block btn-sm">Запросить новый код / Request new code</button>
         </fieldset>
         <br>
