new auth err codes

--- a/public/index.html
+++ b/public/index.html
@@ -76,8 +76,8 @@
           <p><strong>Error!</strong> Invalid secret code. Try with new secret code.</p>
         </div>
         <div id="invalid-password-error" class="hidden alert alert-danger">
-          <p><strong>Ошибка!</strong> Новый пароль совпадает со старым. Введите другой пароль.</p>
-          <p><strong>Error!</strong> New password match old. Enter another password.</p>
+          <p><strong>Ошибка!</strong> Новый пароль не принят. Введите другой пароль.</p>
+          <p><strong>Error!</strong> New password was not accepted. Enter another password.</p>
         </div>
         <div id="secret-request-info" class="hidden alert alert-info">
           <p><strong>Инфо!</strong> Вам выслан новый код для смены пароля.</p>
