--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,7 @@
     <!-- Minimal modal -->
     <script type="html/template" id="minimal-modal-template">
       <div class="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-body">
                <button type="button" class="close" data-dismiss="modal"><span class="fa fa-times"></span></button>
