--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
       <div id="app"></div>
     </form>
 
-    <!-- App loading indicator -->
+    <!-- Load indicator -->
     <div id="load-indicator" style="display:none;">
       <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
     </div>
