fix(app presenter): load indicator

--- a/public/index.html
+++ b/public/index.html
@@ -93,9 +93,9 @@
       <div id="app"></div>
     </form>
 
-    <!-- App loading indicator -->
-    <div class="text-center hidden" id="app-load-indicator" >
-      <h4><i class="fa fa-cog fa-spin fa-lg text-primary"></i> <strong>Загрузка приложения / Application loading</strong></h4>
+    <!-- Load indicator -->
+    <div id="load-indicator" style="display:none;">
+      <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
     </div>
 
     <!-- Notification alerts -->
