feat(utils): custom modal confirm dialog

--- a/public/index.html
+++ b/public/index.html
@@ -135,6 +135,22 @@
       </div>
     </script>
 
+    <!-- Confirm modal -->
+    <script type="html/template" id="confirm-modal-template">
+      <div class="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-body">
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary ok" data-dismiss="modal">Ok</button>
+              <button type="button" class="btn btn-default cancel" data-dismiss="modal">Cancel</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </script>
+
     <!-- Individual modal -->
     <script type="html/template" id="individual-modal-template">
       <div class="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true" data-backdrop="static">
